1.10.7
- Hinzufügen von Thumbs zu den Listitems
1.10.6
- Unterstützung für "Staffelstarts"
1.10.5
- Anzeige von Streaminfos
- Hinzufügen von Episoden einer Staffel zur Merkliste
1.10.4
- Berücksichtigung der FSK-Angaben bei Streamstart
1.10.3
- Fix für Jugendschutzeinstellung
1.10.2
- Fix für Log-Warnhinweise
1.10.1
- Bugfix für Suche, wenn zusätzliche Medieninformation aktiviert sind
1.10.0
- Passwortverschlüsselung
1.9.9
- Infolabels als URL-Parameter
1.9.8
- LiveTV: Sportsender zeigen wieder Livestream; Anzeige aller verfügbaren Sportsender
1.9.7
- Hinweis eingebaut, dass die User-Ratings und Poster von TMDb bezogen werden.
- Smoothstream Addon entfernt
1.9.6
- Um Trefferwahrscheinlichkeit auf TMDB zu erhöhen, wird - sofern vorhanden - zunächst nach dem Titel inkl. Releasehahr gesucht und erst wenn kein Result kommt (weil Sky die falsche Info gibt), so wird ohne der Titel nochmal ohne Jahr gesucht + Error Handling verbessert
- Anzeige Live-TV Übersicht verbessert
1.9.5
- Anzeige von allen Bundesliga- und Sport-Optionskanälen
- TMDb-Poster für Cinema-Kanäle (LiveTV) nutzen
1.9.4
- Anstatt Sky Poster wird nun das Poster von TMDb verwendet, wenn die Option in den Einstellungen aktiviert ist - wegen schlechter Qualität Sky Poster
1.9.3
- Codeoptimierung
1.9.2
- Fix LiveTV-Bug: No longer set "LiveTV" in Content since it doesnt seem to be supported
- Create Setting Option to choose LiveTV Display Option: Channel name or Title first
1.9.1
- Unterstützung für Playready unter Android
  -> DeviceId in die Usersettings verschoben. Die ID ist dabei eine zufällige Uuid, die beim ersten Start von Sky Go generiert wird. Das bedeutet für diejenigen, die die erste Version nutzen und dann updaten, dass eine neue Geräteregistrierung erfolgen wird. 
- Mehr Medieninformationen + Cachen der Informationen
- Mehr Sortieroptionen
- Anzeige von allen Livessendern, wie auf skygo.sky.de + Gruppierung nach Paketen (Bundesliga/Cinema/Entertainment/Sport)