@@ -7,6 +7,8 @@
     <import addon="script.module.cryptopy" version="1.2.6"/>
     <import addon="script.common.plugin.cache" version="2.5.8"/>
     <import addon="script.module.pydes" version="2.0.1"/>
+    <import addon="inputstream.adaptive" version="1.0.8"/>
+    <import addon="script.module.inputstreamhelper" version="0.2.1"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
     <provides>video</provides>
