@@ -20,6 +20,8 @@ import xbmc
 import xbmcgui
 import xbmcaddon, xbmcplugin
 
+from inputstreamhelper import Helper
+
 LOGIN_STATUS = { 'SUCCESS': 'T_100',
                   'SESSION_INVALID': 'S_218',
                   'OTHER_SESSION':'T_206' }
@@ -305,10 +307,9 @@ class SkyGo:
         return True
 
     def play(self, manifest_url, package_code, parental_rating=0, info_tag=None, apix_id=None):
-        # Inputstream settings
-        is_addon = getInputstreamAddon()
-        if not is_addon:
-            xbmcgui.Dialog().notification('Sky Go Fehler', 'Addon "inputstream.adaptive" fehlt!', xbmcgui.NOTIFICATION_ERROR, 2000, True)
+        # Inputstream and DRM
+        helper = Helper(protocol='ism', drm='widevine')
+        if not helper.check_inputstream():
             return False
         
         #Jugendschutz
